--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 </body>
 </html>
