--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width,initial-scale=1">
+    <link rel=icon href=/favicon.ico>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap">
+    <link rel="stylesheet" href="src/assets/style.css">
     <title>portfolio</title>
 </head>
 <body>
 <div id="app"></div>
 <script type="module" src="./src/main.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<!--<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>-->
+<!--<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>-->
 </body>
 </html>
