--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Léo Teissier">
+    <meta name="description" content="Portfolio de Léo Teissier - Développeur Web">
+    <meta name="keywords" content="portfolio, Léo Teissier, développeur web, projets, compétences">
+    <title>Portfolio de Léo Teissier</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="src/assets/style.css">
-    <title>portfolio</title>
 </head>
 <body>
 <div id="app"></div>
